🎨 Fix various reports from IntelliJ code inspecter