@@ -53,7 +53,7 @@ public class VnfIndicatorNotificationService {
 			LOG.warn("Unable to find notification event {} in database.", event.getSubscriptionId());
 			throw new NotFoundException("Unable to find notification event " + event.getSubscriptionId());
 		}
-		event.setNfvoId(subscription.get(0).getRemoteServerId());
+		event.setNfvoId(subscription.getFirst().getRemoteServerId());
 		final VnfIndiValueChangeNotification newEvent = vnfIndJpa.save(event);
 		LOG.info("Event received: {} => Id: {}", newEvent.getNfvoId(), newEvent.getId());
 		// XXX Have to send a bus event instead of relying on a poller
